// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search with 0 results 1`] = `
<div>
  <h2>
    Search
  </h2>
  <button
    onClick={undefined}
  >
    Get latest photos
  </button>
  <section
    className="row"
  />
</div>
`;

exports[`Search with 1 result 1`] = `
<div>
  <h2>
    Search
  </h2>
  <button
    onClick={undefined}
  >
    Get latest photos
  </button>
  <section
    className="row"
  >
    <figure
      className="col-md-2 center-block"
    >
      <img
        alt=""
        className="img-responsive"
        src="myImg.jpg"
      />
    </figure>
  </section>
</div>
`;

exports[`Search with multiple results 1`] = `
<div>
  <h2>
    Search
  </h2>
  <button
    onClick={undefined}
  >
    Get latest photos
  </button>
  <section
    className="row"
  >
    <figure
      className="col-md-2 center-block"
    >
      <img
        alt=""
        className="img-responsive"
        src="myImg.jpg"
      />
    </figure>
    <figure
      className="col-md-2 center-block"
    >
      <img
        alt=""
        className="img-responsive"
        src="myImg2.jpg"
      />
    </figure>
  </section>
</div>
`;

exports[`Search with no result array 1`] = `
<div>
  <h2>
    Search
  </h2>
  <button
    onClick={undefined}
  >
    Get latest photos
  </button>
  <img
    alt="searching"
    src="loader.svg"
  />
</div>
`;
